modules/eks/conf/ingress-dev.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prometheus
  namespace: kube-system
spec:
  ingressClassName: nginx
  rules:
  - host: prometheus-dev.cloudapps.today # we need to create a DNS Record for the ingress lb as CNAME
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: prom-stack-kube-prometheus-prometheus
            port:
              number: 9090
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana
  namespace: kube-system
spec:
  ingressClassName: nginx
  rules:
  - host: grafana-dev.cloudapps.today # we need to create a DNS Record for the ingress lb as CNAME
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: prom-stack-grafana
            port:
              number: 80
